--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 project(o_library_tests)
 
-add_executable(check_o_vector check_o_vector.c)
+add_executable(o_vector_tests o_vector_tests.c)
 
-target_include_directories(check_o_vector PRIVATE ../src)
+target_include_directories(o_vector_tests PRIVATE ../src)
 
-target_link_libraries(check_o_vector o_library check subunit pthread rt)
+target_link_libraries(o_vector_tests o_library check subunit pthread rt)
