--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,3 +13,7 @@ target_link_libraries(o_forward_list_tests o_library check subunit pthread rt)
 add_executable(o_avl_set_tests o_avl_set_tests.c)
 target_include_directories(o_avl_set_tests PRIVATE ../src)
 target_link_libraries(o_avl_set_tests o_library check subunit pthread rt)
+
+add_executable(o_avl_map_tests o_avl_map_tests.c)
+target_include_directories(o_avl_map_tests PRIVATE ../src)
+target_link_libraries(o_avl_map_tests o_library check subunit pthread rt)
